[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Instruments_Libraries"
version = "2025.07.30"
authors = [
  { name = "Martin Mihaylov", email = "martinmi@hni.uni-paderborn.de" },
  { name = "Maxim Weizel", email = "mweizel@hni.uni-paderborn.de" },
]
description = "Python Instrument Libraries used by the Circuit and System Department at Paderborn University (Heinz Nixdorf Institute)"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "matplotlib>=3.10.0",
  "ftd2xx>=1.3.8",
  "pyserial>=3.5",
  "python-vxi11>=0.9",
  "PyVISA>=1.14.1",
]

[project.optional-dependencies]
gui = ["customtkinter", "pillow"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs         # exclude eggs directory
    | \.git          # exclude git directory
    | \.hg           # exclude mercurial directory
    | \.mypy_cache    # exclude mypy cache directory
    | \.nox           # exclude nox directory
    | \.tox           # exclude tox directory
    | \.venv          # exclude python virtual environments
    | build           # exclude build directory
    | dist            # exclude dist directory
    | venv            # exclude python virtual environments
    | __pycache__     # exclude pycache directories
    | .*\.py[co]        # exclude python bytecode files
  )$
'''
