[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Instruments_Libraries"
version = "2026.01.08"
authors = [
  { name = "Martin Mihaylov", email = "martinmi@hni.uni-paderborn.de" },
  { name = "Maxim Weizel", email = "mweizel@hni.uni-paderborn.de" },
]
description = "Python Instrument Libraries used by the Circuit and System Department at Paderborn University (Heinz Nixdorf Institute)"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "matplotlib>=3.10.0",
  "ftd2xx>=1.3.8",
  "pyserial>=3.5",
  "python-vxi11>=0.9",
  "PyVISA>=1.14.1",
  "matlabengine>=24.2",
]

[project.optional-dependencies]
gui = ["customtkinter", "pillow"]

[tool.setuptools]
packages = ["Instruments_Libraries"]
include-package-data = true #needs MANIFEST.in maybe needed in future releases

# Code Formatting Settings: mostly black/autopep8 or nothing is used in the project
[tool.black]
line-length = 100

[tool.autopep8]
max_line_length = 100
ignore = ["E402", "W503", "E266"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
ignore = ["E402", "W503", "E266"]
